[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Head.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Snake.gd" type="Script" id=3]

[node name="Snake" type="Node2D"]
script = ExtResource( 3 )
speed = 15

[node name="Head" parent="." instance=ExtResource( 1 )]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="move_snake"]

[editable path="Head"]
